# lexborpp

./: AGENTS.md  CMakeLists.txt  README.md  context7.json  vcpkg.json
benchmark/: BENCHMARK.md  bench_css_selector.cpp
cmake/: lexborppConfig.cmake.in
docs/superpowers/plans/: 2026-04-29-range-adapters-implementation.md  2026-06-04-lexborpp-header-split.md  2026-06-04-runtime-css-selector.md  2026-06-04-template-jit-css-selector.md
docs/superpowers/specs/: 2026-04-29-range-adapters-design.md  2026-06-04-lexborpp-header-split-design.md
include/: lexborpp.hpp
include/lexborpp/: core.hpp  document_id_index.hpp  nttp_match.hpp  nttp_parser.hpp  nttp_query.hpp  nttp_range_adapters.hpp  ranges_specializations.hpp  runtime_css_match.hpp  runtime_css_parser.hpp  serialize_runtime.hpp  tag_name.hpp
test/: CMakeLists.txt  test_lexborpp.cpp  test_support.hpp
